--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "Hardik Mathur",
   "type": "module",
    "scripts": {
-    "start": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "dependencies": {
     "@google/genai": "^1.15.0",
