--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "ISC",
   "author": "Hardik Mathur",
   "type": "module",
-   "scripts": {
+  "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html"
   },
@@ -16,6 +16,7 @@
     "parcel": "^2.15.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.7.1",
     "tailwindcss": "^4.1.11"
   }
